--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "tailwindcss": "3.0.24"
   },
   "devDependencies": {
