--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "17.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
+    "react-select": "^5.3.2",
     "tailwindcss": "3.0.24"
   },
   "devDependencies": {
