--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@remix-run/serve": "1.4.3",
     "bcryptjs": "^2.4.3",
     "concurrently": "7.1.0",
+    "markdown-to-jsx": "^7.1.7",
     "mongoose": "6.3.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
