--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-select": "^5.3.2",
+    "react-tooltip": "^4.2.21",
     "tailwindcss": "3.0.24"
   },
   "devDependencies": {
