--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@remix-run/dev": "1.4.3",
     "@remix-run/eslint-config": "1.4.3",
+    "@tailwindcss/typography": "^0.5.2",
     "eslint": "8.11.0"
   },
   "engines": {
